fix z-index of offcanvas and modal close

--- a/src/less/components/offcanvas.less
+++ b/src/less/components/offcanvas.less
@@ -195,6 +195,7 @@
 
 .uk-offcanvas-close {
     position: absolute;
+    z-index: @offcanvas-z-index;
     top: @offcanvas-close-position;
     right: @offcanvas-close-position;
     padding: @offcanvas-close-padding;
